--- a/assets/css/portofolioclient.css
+++ b/assets/css/portofolioclient.css
@@ -1,3 +1,72 @@
+.portofolio-lists {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 0.5rem;
+}
+
+
+
 .port-img {
     width: 100vw;
+    height: 13rem;
+    object-fit: cover;
+}
+
+.overlay {
+    left: 0;
+    bottom: 100%;
+    height: 0;
+    width: 100%;
+    overflow: hidden;
+    backdrop-filter: blur(8px) brightness;
+}
+
+
+/* client section */
+
+.client-sec {
+    padding-top: 5rem;
+}
+
+.client-title {
+    padding-left: 1rem;
+    padding-bottom: 5rem;
+}
+
+.client-title h3 {
+    font-size: 2rem;
+    padding-left: 1.8rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-left: solid 2px #2DA0CA;
+
+}
+
+.client-lists {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
+    padding-bottom: 5rem;
+    gap: 1rem;
+}
+
+.cient-logo {
+    width: 8rem;
+    height: 8rem;
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+.client-quote {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    padding-bottom: 5rem
+}
+
+.client-quote h4 {
+    font-weight: 100;
+    padding-bottom: 2rem;
+    text-align: justify;
+    line-height: 1.6;
 }
