--- a/assets/css/workprocess.css
+++ b/assets/css/workprocess.css
@@ -1,7 +1,40 @@
-.work-process-image {
-    width: 100vw;
+.work-process {
+    padding-top: 5rem;
+    background: linear-gradient(0deg,rgba(45, 160, 202, 0.5), rgba(45, 160, 202, 0.5)), url("/assets/img/work=process\ .png");
+    padding-bottom: 5rem;
 }
 
-.our-team-image {
+.work-process-title {
+    padding-left: 1rem;
+    padding-bottom: 2rem;
+}
+
+.work-process-title h3 {
+    font-size: 2rem;
+    padding-left: 1.8rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-left: solid 2px #2DA0CA;
+
+}
+
+.work-process-content {
+    background-color: aliceblue;
+    background: rgba(204, 204, 204, 0.5);
+}
+
+.work-process-content p {
+    padding-left: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-right: 1rem;
+    text-align: justify;
+    line-height: 1.6;
+   
+}
+
+.work-process-image {
     width: 100vw;
+    background-color: aliceblue;
+    background: rgba(204, 204, 204, 0.5);
 }
