--- a/assets/css/workprocess.css
+++ b/assets/css/workprocess.css
@@ -1,6 +1,6 @@
 .work-process {
     padding-top: 5rem;
-    background: linear-gradient(0deg,rgba(45, 160, 202, 0.5), rgba(45, 160, 202, 0.5)), url("/assets/img/work=process\ .png");
+    background: linear-gradient(0deg,rgba(45, 160, 202, 0.5), rgba(45, 160, 202, 0.5)), url("/assets/img/work=process\ .avif");
     padding-bottom: 5rem;
 }
 
